<resources>
    <string name="app_name">SpeedRoomMatingApp</string>
    <string name="appbar_title">SpeedRoomMating</string>
    <string name="empty_text">No upcoming events are scheduled. If this is incorrect, get in touch with our CORE team.</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="retry">Retry</string>
    <string name="image">image</string>
    <string name="cost">Free</string>
    <string name="venue">Manhattan</string>
    <string name="location">The Penny Farthing</string>
    <string name="date">16th May</string>
    <string name="time">6:30 — 8:00 PM</string>
</resources>
