<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="3dp"
        android:layout_height="210dp">
        <RelativeLayout
            android:id="@+id/image"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/cost"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_alignParentTop="true"
                android:layout_width="51dp"
                android:layout_height="24dp"
                android:text="@string/cost"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:background="@drawable/dark_button_bg"/>

            <RelativeLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="start"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/venue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/venue"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_marginTop="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/location"
                        android:textColor="@color/translucent_white"
                        android:textSize="14sp" />



                </LinearLayout>

                <LinearLayout
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:gravity="end"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/date"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_marginTop="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/time"
                        android:textColor="@color/translucent_white"
                        android:textSize="14sp" />


                </LinearLayout>



            </RelativeLayout>



        </RelativeLayout>






    </androidx.cardview.widget.CardView>

</LinearLayout>