<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mineshaft"
            app:title="@string/appbar_title"
            app:titleTextColor="@color/white"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:theme="@style/ThemeOverlay.AppCompat.Light">
        </androidx.appcompat.widget.Toolbar>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@color/mineshaft"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/bright_turquoise"
            app:tabIndicatorColor="@color/bright_turquoise"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:tabIndicatorHeight="2dp"
            app:tabTextAppearance="@style/TabLayout"
            app:tabTextColor="@color/silver"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/stateLayout"
                android:paddingTop="48dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_list"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    android:lineHeight="24sp"
                    android:text="@string/nothing_to_show"
                    android:textColor="@color/silver"
                    android:textSize="16sp" />

                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/empty_text"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:textColor="@color/silver"
                    android:lineHeight="24sp"/>

                <Button
                    android:layout_marginTop="20dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:text="@string/retry"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <androidx.viewpager2.widget.ViewPager2
                    android:paddingTop="16dp"
                    android:id="@+id/viewPager"
                    android:orientation="vertical"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>